gitops/espresso/apps/mealie/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mealie
  labels:
    pod-security.kubernetes.io/enforce: baseline
