gitops/espresso/apps/mealie/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie-internal
  namespace: mealie
spec:
  clusterIP: None
  selector:
    app: mealie
  ports:
    - name: http
      port: 9000
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: mealie
spec:
  selector:
    app: mealie
  ports:
    - name: http
      port: 9000
      targetPort: http
