gitops/espresso/apps/mealie/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mealie
  namespace: mealie
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - mealie.asgard.michaelbrusegard.com
  rules:
    - backendRefs:
        - name: mealie
          port: 9000
